tests/snapshots/regression/collections__error_limit_missing_commas.snap
---
source: tests/regression_snapshots.rs
---
$ flux --no-cache tests/fixtures/collections/error_limit_missing_commas.flx
exit_code: 1

Error[E076]: Missing Closing Delimiter

Expected a closing `)` to match this opening `(`.

  tests/fixtures/collections/error_limit_missing_commas.flx:2:6
  |
2 | print(
  |      ^

note: Expected `)` before this token.
  tests/fixtures/collections/error_limit_missing_commas.flx:4:3
  |
4 |   11 12 13 14 15 16 17 18 19 20
  |   ^^


Error[E031]: Expected Expression

Expected expression, found `)`.

  tests/fixtures/collections/error_limit_missing_commas.flx:9:1
  |
9 | );
  | ^


Error[E031]: Expected Expression

Expected expression, found `;`.

  tests/fixtures/collections/error_limit_missing_commas.flx:9:2
  |
9 | );
  |  ^

Note:
  Suppressed 9 cascading parser diagnostic(s) likely caused by an earlier syntax error.

Found 3 errors.
